1.0.0.7:
  -added labels below the medallions/stones
  -fixed two Forest Temple locations
  -added Link the Goron can be stopped with bow
  -added child trade sequence
1.0.0.6:
  -fixed Shadow Temple having 1 free item too much
  -changed free item counters to go upwards so the dungeon gets cleared if you have them all
  -fixed Statue Ledge in Spirit Temple reachable w/ hoverboots and w/o hookshot
  -fixed rooftop chest in gerudo fortress reachable with hookshot (and scarecrow)
  -fixed a few Forest Temple locations
1.0.0.5:
  -fixed Adult Shooting Gallery showing without bow
  -added Dampe back in, he got lost in the reorganization, oops
  -fixed Bombchu Bowling has 2 prizes
  -fixed item capture on Darunias Joy
  -fixed colossus area logic
  -improved Forest Temple:
    -split up the chests
    -tried to model the reqs
  -improved Fire Temple:
    -split up the chests
    -tried to model the reqs
  -improved Water Temple:
    -split up the chests
    -tried to model the reqs
  -added the "free items" in as a counter for each dungeon
1.0.0.4:
  -added small key counters
  -started adding open/closed forest/door logic
  -added rainbow bridge requirements and a toggle for it
  -changed the default layout of the tracker to incorporate new icons
  -fixed frog ocarina minigame requires to play storm to them before
  -added bombchus as a sequence break for bombs (in most places)
  -added all kinds of logic sequence breaks (thanks SauceRelic!)
  -fixed tracker capture layout
  -added separate maps for child and adult to prep for reorganization
  -reorganized the internal structure of the data heavily, so I can add new stuff more easily
1.0.0.3:
  -fixed Zoras Domain/Fountain logic interaction between child and adult
  -fixed Zoras Fountain Fairy can't be opened with hammer
  -fixed Haunted Wasteland Central Structure capture for Stone of Agony not showing
  -fixed Mountain Crater with hoverboots but no bombs
  -improved Spirit Temple:
    -split up the items